fix(footer): delete broken layout

--- a/src/view/styles/index.css
+++ b/src/view/styles/index.css
@@ -79,14 +79,6 @@
   }
 }
 
-* {
-  overflow-x: hidden;
-}
-
-h1 {
-  overflow: hidden;
-}
-
 .circles li {
   position: absolute;
   display: block;
